[gd_scene load_steps=9 format=2]

[ext_resource path="res://OrbController/BaseOrb/scr_orb.gd" type="Script" id=1]
[ext_resource path="res://OrbController/BaseOrb/proto_orb.png" type="Texture" id=2]
[ext_resource path="res://OrbController/BaseOrb/proto_ui_arrow.png" type="Texture" id=3]
[ext_resource path="res://OrbController/BaseOrb/scr_orb_arrow.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.3552

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0296296, 0.996296 )
colors = PoolColorArray( 1, 0, 0, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[node name="Orb" type="Area2D" groups=[
"Clean",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Arrow_GUI" type="Sprite" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RecoverTimer" type="Timer" parent="." groups=[
"Orb",
]]
wait_time = 0.4
one_shot = true

[node name="Trail" type="Particles2D" parent="."]
emitting = false
amount = 20
speed_scale = 2.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Orb_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RecoverTimer" to="." method="_on_RecoverTimer_timeout"]
